--- a/k_brazos/bandit_experiment.ipynb
+++ b/k_brazos/bandit_experiment.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "4582eec6",
       "metadata": {
         "ExecuteTime": {
@@ -60,7 +60,26 @@
         "id": "4582eec6",
         "outputId": "e7fac2c4-73e6-4271-a94a-4f40c920d478"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['/Library/Frameworks/Python.framework/Versions/3.12/lib/python312.zip', '/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12', '/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/lib-dynload', '', '/Users/davidfernandezexposito/Desktop/Master/Extensiones de Machine Learning/FernandezMartinezPolo-EML-RL/.env/lib/python3.12/site-packages', './src', './src']\n"
+          ]
+        },
+        {
+          "ename": "ImportError",
+          "evalue": "cannot import name 'UCB1' from 'algorithms' (/Users/davidfernandezexposito/Desktop/Master/Extensiones de Machine Learning/FernandezMartinezPolo-EML-RL/k_brazos/src/algorithms/__init__.py)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m List\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01malgorithms\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Algorithm, EpsilonGreedy, EpsilonDecay, UCB1\n\u001b[32m     16\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01marms\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ArmNormal, Bandit\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplotting\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m plot_average_rewards, plot_optimal_selections, plot_regret\n",
+            "\u001b[31mImportError\u001b[39m: cannot import name 'UCB1' from 'algorithms' (/Users/davidfernandezexposito/Desktop/Master/Extensiones de Machine Learning/FernandezMartinezPolo-EML-RL/k_brazos/src/algorithms/__init__.py)"
+          ]
+        }
+      ],
       "source": [
         "#@title Importamos todas las clases y funciones\n",
         "\n",
@@ -76,7 +95,7 @@
         "import numpy as np\n",
         "from typing import List\n",
         "\n",
-        "from algorithms import Algorithm, EpsilonGreedy, EpsilonDecay\n",
+        "from algorithms import Algorithm, EpsilonGreedy, EpsilonDecay, UCB1\n",
         "from arms import ArmNormal, Bandit\n",
         "from plotting import plot_average_rewards, plot_optimal_selections, plot_regret\n"
       ]
@@ -212,7 +231,7 @@
         "# Definir los algoritmos a comparar. En este caso son 3 algoritmos epsilon-greedy con diferentes valores de epsilon.\n",
         "# algorithms = [EpsilonGreedy(k=k, epsilon=0), EpsilonGreedy(k=k, epsilon=0.01), EpsilonGreedy(k=k, epsilon=0.1)]\n",
         "algorithms = [EpsilonDecay(k=k, epsilon=1.0, decay_lambda=0.01, decay_type=\"lin\"), EpsilonDecay(k=k, epsilon=1.0, decay_lambda=0.01, decay_type=\"exp\"), EpsilonDecay(k=k, epsilon=1.0, decay_lambda=0.01, decay_type=\"inv\")]\n",
-        "\n",
+        "#algorithms = [UCB1(k=k, c=1.0)]\n",
         "# Ejecutar el experimento y obtener las recompensas promedio, rechazo acumulado y promedio de las selecciones óptimas\n",
         "rewards, regrets, optimal_selections = run_experiment(bandit, algorithms, steps, runs)\n"
       ]
@@ -388,7 +407,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": ".env (3.12.1)",
       "language": "python",
       "name": "python3"
     },
@@ -402,7 +421,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
