Update UCB experiment and arms init.py

--- a/k_brazos/UCB_bernoulli.ipynb
+++ b/k_brazos/UCB_bernoulli.ipynb
@@ -62,13 +62,22 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!git clone https://github.com/FernandezMartinezPolo-EML-RL.git\n",
-        "!cd k_brazos/"
+        "!git clone https://github.com/angelms2003/FernandezMartinezPolo-EML-RL.git\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
+      "id": "74579fb5",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!cd FernandezMartinezPolo-EML-RL/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "4582eec6",
       "metadata": {
         "ExecuteTime": {
@@ -98,7 +107,7 @@
         "import sys\n",
         "\n",
         "# Añadir los directorio fuentes al path de Python\n",
-        "sys.path.append('./src')\n",
+        "sys.path.append('/content/FernandezMartinezPolo-EML-RL/k_brazos/src')\n",
         "\n",
         "\n",
         "# Verificar que se han añadido correctamente\n",
@@ -108,7 +117,7 @@
         "from typing import List\n",
         "\n",
         "from algorithms import Algorithm, EpsilonGreedy, EpsilonDecay, UCB1, UCB2\n",
-        "from arms import ArmNormal, Bandit\n",
+        "from arms import ArmBernoulli, Bandit\n",
         "from plotting import plot_average_rewards, plot_optimal_selections, plot_regret\n"
       ]
     },
