Add UCB_Normal and UCB_Binomial

--- a/k_brazos/UCB_binomial.ipynb
+++ b/k_brazos/UCB_binomial.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/angelms2003/FernandezMartinezPolo-EML-RL/blob/main/k_brazos/UCB_bernoulli.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/angelms2003/FernandezMartinezPolo-EML-RL/blob/main/k_brazos/UCB_binomial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -117,7 +117,7 @@
         "from typing import List\n",
         "\n",
         "from algorithms import Algorithm, EpsilonGreedy, EpsilonDecay, UCB1, UCB2\n",
-        "from arms import ArmBernoulli, Bandit\n",
+        "from arms import ArmBinomial, Bandit\n",
         "from plotting import plot_average_rewards, plot_optimal_selections, plot_regret\n"
       ]
     },
@@ -255,7 +255,7 @@
         "runs = 500  # Número de ejecuciones\n",
         "\n",
         "# Creación del bandit\n",
-        "bandit = Bandit(arms=ArmBernoulli.generate_arms(k)) # Generar un bandido con k brazos de distribución normal\n",
+        "bandit = Bandit(arms=ArmBinomial.generate_arms(k)) # Generar un bandido con k brazos de distribución normal\n",
         "print(bandit)\n",
         "\n",
         "optimal_arm = bandit.optimal_arm\n",
