New regret formula

--- a/k_brazos/UCB_bernoulli.ipynb
+++ b/k_brazos/UCB_bernoulli.ipynb
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "7377ca48ee0f5946",
       "metadata": {
         "ExecuteTime": {
@@ -195,7 +195,8 @@
         "                else:\n",
         "                    sum_current_run_expected_value[idx] = sum_current_run_expected_value[idx] + bandit.get_expected_value(chosen_arm)\n",
         "\n",
-        "                regrets[idx, step] += (step+1)*bandit.get_expected_value(optimal_arm) - sum_current_run_expected_value[idx]\n",
+        "                regrets[idx, step] += regrets[idx, step-1] + (bandit.get_expected_value(optimal_arm) - reward) if step > 0 else bandit.get_expected_value(optimal_arm) - reward\n",
+        "                #regrets[idx, step] += (step+1)*bandit.get_expected_value(optimal_arm) - sum_current_run_expected_value[idx]\n",
         "\n",
         "    rewards /= runs\n",
         "    regrets /= runs\n",
